# rust_test

./: .gitignore  Cargo.toml  compile_shaders.sh  rendersvosdf.bat  sphere.svosdf  svosdf.bat
data/: ganymede-and-jupiter.svosdf
shader/: culling.spv  culling_debug_frag.spv  depth_pyramid_downsample.spv  depth_pyramid_downsample_all.spv  depth_pyramid_first_mip.spv  full_screen_triangle_vert.spv  main_frag.spv  main_frontface_vert.spv  main_vert.spv  simple_frag.spv  svo_main.frag  svo_main.vert  svo_main_frag.spv  svo_main_vert.spv  vbuffer_color_frag.spv  vbuffer_getattributeatvertex_frag.spv  vbuffer_getattributeatvertex_vert.spv  vbuffer_leadingvertex_frag.spv  vbuffer_leadingvertex_vert.spv  vbuffer_nonindexed_frag.spv  vbuffer_nonindexed_vert.spv  vbuffer_primid_frag.spv  vbuffer_vert.spv
src/: lib.rs  serialization.rs  svosdf.rs  vulkan_base.rs  vulkan_helpers.rs
