[package]
name = "rust_test"
version = "0.1.0"
authors = ["Sebastian Aaltonen <sebastian.aaltonen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
winit = "0.29.10"
image = "0.24"
rand = "0.7.3"
miniz_oxide = "0.4.3"
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator", branch = "main" }


